basic page layout setup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	
+	<header>Header / Navigation</header>
+    <main>
+        <article class="main">Main</article>
+        <aside class="sidebar1">Sidebar 1 (nav)</aside>
+        <aside class="sidebar2">Sidebar 2 (ads)</aside>
+    </main>
+    
     <script src="script.js"></script>
   </body>
 </html>
