add footer, add basic format rules

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <aside class="sidebar1">Sidebar 1 (nav)</aside>
         <aside class="sidebar2">Sidebar 2 (ads)</aside>
     </main>
-    
+    <footer>Footer</footer>
+
     <script src="script.js"></script>
   </body>
 </html>
