--- a/index.html
+++ b/index.html
@@ -8,13 +8,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<header>Header / Navigation</header>
+	<header>
+        Header / Navigation
+    </header>
     <main>
-        <article class="main">Main</article>
-        <aside class="sidebar1">Sidebar 1 (nav)</aside>
-        <aside class="sidebar2">Sidebar 2 (ads)</aside>
+        <article class="main">
+            Main
+            <h2>Umi's Blog</h2>
+        </article>
+        <aside class="sidebar1">
+            Sidebar 1 (nav)
+            <ul class="content-links">
+                <li>Link 1</li>
+                <li>Link 2</li>
+                <li>Link 3</li>
+            </ul>
+        </aside>
+        <aside class="sidebar2">
+            Sidebar 2 (ads)
+        </aside>
     </main>
-    <footer>Footer</footer>
+    <footer>
+        Footer
+    </footer>
 
     <script src="script.js"></script>
   </body>
